fixed spacing

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav{
 }
 
 #name{
-  padding-top: 15%;
+  padding-top: 18%;
   margin-bottom: 0px;
   font-size: 12vh;
   font-family: 'Shippori Mincho B1', sans-serif;
